check in something

--- a/day3/.settings/org.eclipse.core.resources.prefs
+++ b/day3/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//main/iterator_lesson.py=utf-8
 encoding//main/lambda_lesson.py=utf-8
 encoding//main/pachong.py=utf-8
 encoding//main/thread_process.py=utf-8
+encoding//main/thread_process2.py=utf-8
